<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_movie"
        android:icon="@drawable/movie"
        android:title="@string/title_movie" />

    <item
        android:id="@+id/nav_tv"
        android:icon="@drawable/tv"
        android:title="@string/title_tv" />

    <item
        android:id="@+id/nav_favorite"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/title_favorite" />


</menu>